# processit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/processit/: __init__.py  _version.py  progress.py
tests/: test_progress.py
